<resources>
    <string name="app_name">material_design</string>
    <string name="carro_guardado_exitosamente">Carro guardado exitosamente</string>
    <string name="marca">Marca</string>
    <string name="color">Color</string>
    <string name="placa">Placa</string>
    <string name="velocidad_max">Velocidad max</string>
    <string name="precio">Precio</string>
    <string name="guardar_agregarPersona">Guardar</string>
    <string name="guardarAgregarCarro">Guardar</string>
    <string name="limpiarAgregarCarro">Limpiar</string>
    <string name="tituloAgregarCarro">AGREGAR CARRO</string>
    <string name="tituloDetalleCarro">DETALLE CARRO</string>
    <string name="marcaDetalleCarro">Marca:</string>
    <string name="colorDetalleCarro">Color:</string>
    <string name="placaDetalleCarro">Placa:</string>
    <string name="velocidadMaxDetalleCarro">VelocidadMax:</string>
    <string name="precioDetalleCarro">Precio:</string>
    <string name="TituloElimnarCarro">Eliminar carro</string>
    <string name="pregunta_eliminarCarro">¿Desea eliminar el carro?</string>
    <string name="opcion_si">si</string>
    <string name="opcion_no">no</string>
    <string name="errorMarcaCarro">Ingrese la marca del carro</string>
    <string name="ErrorColorCarro">Ingrese el color del carro</string>
    <string name="ErrorVelocidadCarro">Ingrese la velocidad maxima del carro</string>
    <string name="ErrorPlacaCarro">Ingrese la placa del carro</string>
    <string name="ErrorPrecioCarro">Ingrese el precio del carro</string>
    <string name="ErrorRepetirPlaca">No puede repetir la placa</string>
    <string name="seleccionarFoto">Seleccione foto</string>
</resources>
